fixed add cart not displaying correctly on mobile

--- a/src/Cart-Dropdown/Cart-Dropdown.styles.scss
+++ b/src/Cart-Dropdown/Cart-Dropdown.styles.scss
@@ -37,6 +37,7 @@
     .cart-dropdown-container {
       top: 45px;
       right: 10px;
+      position: fixed;
     }
   }
   @media (max-width: 607px) {
