--- a/src/Sign-in-form/Sign-in-form.styles.scss
+++ b/src/Sign-in-form/Sign-in-form.styles.scss
@@ -11,5 +11,18 @@
   .buttons-container {
     display: flex;
     justify-content: space-between;
+
+    .spinner-icon {
+  
+      animation: spin 1s linear infinite !important;
+      color: #ffffff !important;
+      font-size: 24px !important; 
+    }
+    
+    @keyframes spin {
+      0% { transform: rotate(0deg); }
+      100% { transform: rotate(360deg); }
+    }
   }
+  
 }
